# airlock

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.worker  README.md  SKILL.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: agent-guide.md  architecture.md  implementation-plan.md
specs/: 01-foundation.md  01-project-skeleton.md  02-docker-execution.md  02-worker-pool.md  03-web-ui.md  04-profile-system.md  1.1-foundation.md  2.1-credential-management.md  4.1-execution-engine.md  5.1-output-sanitization.md  5.2-container-hardening.md  5.3-network-allowlists.md
src/airlock/: __init__.py  __main__.py  app.py  auth.py  crypto.py  db.py  models.py  worker_manager.py
src/airlock/api/: admin.py  agent.py  health.py
src/airlock/services/: credentials.py  executions.py  profiles.py
src/airlock/worker/: sdk.py  server.py
static/: dashboard.html  index.html
static/css/: style.css
static/js/: app.js
tests/: conftest.py  test_admin_auth.py  test_agent_api.py  test_credentials.py  test_docker_execution.py  test_execution_engine.py  test_health.py  test_profiles.py
ui/: DESIGN.md  index.html  package-lock.json  package.json  vite.config.js
ui/src/: App.svelte  main.js
ui/src/lib/: api.js  router.js
ui/src/lib/components/: Button.svelte  Card.svelte  ConfirmDialog.svelte  EmptyState.svelte  Input.svelte  PageHeader.svelte  Sidebar.svelte  StatusPill.svelte  ToastContainer.svelte
ui/src/lib/pages/: Credentials.svelte  Executions.svelte  Login.svelte  Overview.svelte  ProfileDetail.svelte  (+3 more)
ui/src/styles/: global.css
(+2 files in other folders)
